# pydrime

./: .gitignore  .ruff.toml  CHANGELOG.md  README.md  pyproject.toml  requirements-test.txt
benchmarks/: README.md  benchmark_api_upload.py  benchmark_cloud_backup.py  benchmark_cloud_to_local.py  benchmark_ignore.py  benchmark_local_backup.py  benchmark_local_to_cloud.py  benchmark_parallel_upload.py  benchmark_sync_api.py  benchmark_sync_modes.py  benchmark_two_way.py  benchmark_upload_scenarios.py  run_benchmarks.py  test_sync_api.py  test_sync_modes.py
docs/: api.rst  cli.rst  index.rst  quickstart.rst
pydrime/: __init__.py  api.py  auth.py  cli.py  cli_progress.py  download_helpers.py  duplicate_finder.py  duplicate_handler.py  exceptions.py  file_entries_manager.py  models.py  output.py  progress.py  upload_preview.py  utils.py  validation.py  workspace_utils.py
pydrime/cli/: adapters.py  download_command.py  server_commands.py  sync_command.py  upload_command.py  vault_commands.py
pydrime/rest/: __init__.py
tests/: test_api.py  test_api_retry.py  test_cli.py  test_cli_adapters.py  test_config.py  test_duplicate_finder.py  test_duplicate_handler.py  test_file_entries_manager.py  test_logging.py  test_models.py  test_output.py  test_rest_provider.py  test_rest_server.py  test_sync_comparator.py  test_sync_concurrency.py  test_sync_config.py  test_sync_engine.py  test_sync_ignore.py  test_sync_pair.py  test_sync_state.py  test_upload_preview.py  test_utils.py  test_vault_crypto.py  test_webdav_provider.py  test_webdav_server.py  test_workspace_utils.py
(+15 files in other folders)
